Update SDC with new 'security-util-lib' version
Signed-off-by: Vasyl Razinkov <vasyl.razinkov@est.tech>
Change-Id: Iece4430f2ebceb8bfb1ea1a89c541335e2f35b11
Issue-ID: SDC-4165